# Credit-Card-Approval-Prediction-System

./: .gitignore  .vercelignore  LICENSE  README.md  app.py  config.py  extract_history.py  history_all.txt  history_predict.txt  predict.html.bak  predict.py  predict.py.bak  preprocessing.py  pyproject.toml  render.yaml  requirements-train.txt  requirements.txt  result.html.bak  train.py  utils.py  vercel.json  wsgi.py
models/: results.json
notebooks/: 01_EDA.ipynb
static/css/: style.css
static/js/: main.js
templates/: 404.html  about.html  contact.html  index.html  predict.html  result.html
tests/: test_app.py
