[project]
name = "credit-card-approval-prediction-system"
version = "0.1.0"
description = "Flask credit card approval prediction app"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.0.3",
  "gunicorn==22.0.0",
  "Werkzeug==3.0.3",
  "scikit-learn==1.5.1",
  "joblib==1.4.2",
  "pandas==2.2.2",
  "numpy==1.26.4",
]

[tool.uv]
package = false
